# rule0

./: README.md  base.py  hello.py  main.py  package-lock.json  pyproject.toml
agents/: __init__.py  action.py  admin.py  judge.py  participant.py  prompt.py  state.py
cmd/: README.md  example.py  mock_server.py  server.py
docs/: agents.md  construct-prompt.md  example-flow.md  graph.drawio  ideas.md
docs/prompts/: ideas.md  judge_first.md  judge_system.md  participant_first.md
prompts/: admin_first.md  judge_system.md  loader.py  participant_system.md
prompts/admin/: move.md  system.md
prompts/judge/: move.md
prompts/participant/: system.md
prompts/state/: default.md
research/: metrics.md
rule0/: base.py  builder.py
rule0/agents/: __init__.py  action.py  admin.py  judge.py  llm.py  participant.py  state.py
rule0/orchestrator/: llm.py  state.py
rule0/prompts/: loader.py  note.py
rule0/prompts/admin/: move.md  system.md
rule0/prompts/all/: system.md
rule0/prompts/judge/: move.md  system.md
rule0/prompts/participant/: move.md  note.md  system.md
rule0/prompts/state/: default.md
rule0/world/: action.py  llm.py  message.py  prompt.py  state.py
server/: README.md  server.py
